<resources>
    <string name="app_name">Digital Chart</string>
    <string name="app_name_full">Thousand Smiles Digital Chart</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="prompt_email">Username/E-Mail Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_clinic_not_found_date">No active clinic can be found on this date</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_username_or_password">Invalid name or password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_internal_bad_request">Bad Request. Please report this problem</string>
    <string name="error_internal_error">Internal Error. Please report this problem</string>
    <string name="error_unknown">Unknown Error. Please report this problem</string>
    <string name="error_unable_to_connect">Unable to connect. Make sure wireless is enabled, that the IP address and port settings are correct, and internet connectivity is present.</string>
    <string name="error_unable_to_get_station_data">Unable to get station data</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="column_label_waiting">Waiting Patients</string>
    <string name="column_label_active">Active Patients</string>
    <string name="pref_header_general">General</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_station_status">Thousand Smiles Clinic Station</string>
    <string name="title_station_selector">Select Clinic Station</string>
    <string name="button_select">Select</string>
    <string name="checkout_yes">Checkout</string>
    <string name="checkout_cancel">Cancel</string>
    <string name="checkout_return_no">No return</string>
    <string name="checkout_return_3">Return in 3 months</string>
    <string name="checkout_return_6">Return in 6 months</string>
    <string name="checkout_return_9">Return in 9 months</string>
    <string name="checkout_return_12">Return in one year</string>
    <string name="label_checkout_optional_msg">(Optional) Message:</string>
    <string name="title_checkout_dialog">Checkout Patient</string>
    <string name="away_yes">Away</string>
    <string name="away_cancel">Cancel</string>
    <string name="msg_return">Return</string>
    <string name="away_return5">Return in 5 minutes</string>
    <string name="away_return15">Return in 15 minutes</string>
    <string name="away_return30">Return in 30 minutes</string>
    <string name="away_return60">Return in 60 minutes</string>
    <string name="title_away_dialog">Select Station Away Duration</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="mother_alcohol">Did the mother consume alcohol during pregnancy?</string>
    <string name="pregnancy_duration">Pregnancy duration (months)</string>
    <string name="pregnancy_smoke">Did the pregnancy occur in a smoking environment?</string>
    <string name="pregnancy_complications">Were there complications with the pregnancy?</string>
    <string name="birth">Birth</string>
    <string name="birth_complications">Were there complications during birth?</string>
    <string name="birth_weight">Birth weight</string>
    <string name="congenitalheartdefect">Does the child have a congenital heart defect?</string>
    <string name="congenitalheartdefect_workup">If the child has a congenital heart defect, was a workup done at birth?</string>
    <string name="congenitalheartdefect_planforcare">If the child has a congenital heart defect, was a plan for care created?</string>
    <string name="growth_stages">Growth Stages</string>
    <string name="first_crawl">Month child first started to crawl</string>
    <string name="first_sit">Month child first started to sit</string>
    <string name="first_words">Month child first started to speak</string>
    <string name="first_walk">Month child first started to walk</string>
    <string name="family_history">Family History</string>
    <string name="relative_cleft">Did a relative of the child have a cleft?</string>
    <string name="parents_cleft">Did the one of both parents of the child have a cleft?</string>
    <string name="siblings_cleft">Did one of the childs\' sisters or brothers have a cleft?</string>
    <string name="current_health">Current Health</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="cold_cough_fever">Does the child have a cold, cough, or fever?</string>
    <string name="hivaids">Does the child have HIV or AIDS?</string>
    <string name="anemia">Is the child anemic?</string>
    <string name="athsma">Does the child suffer from athsma?</string>
    <string name="cancer">Does the child have cancer?</string>
    <string name="diabetes">Is the child diabetic?</string>
    <string name="epilepsy">Is the child epileptic?</string>
    <string name="bleeding_problems">Does the child suffer from bleeding problems?</string>
    <string name="hepatitis">Does the child have hepatitis?</string>
    <string name="tuberculosis">Does the child have tuberculosis?</string>
    <string name="troublespeaking">Does the child have trouble speaking?</string>
    <string name="troublehearing">Does the child have trouble hearing?</string>
    <string name="troubleeating">Does the child have trouble eating?</string>
    <string name="medications">Medications</string>
    <string name="meds">All medications the patient is currently taking</string>
    <string name="allergymeds">All medications the patient is allergic to</string>
    <string name="cm">cm</string>
    <string name="in">in</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="title_select_medications_dialog">Select Medications</string>
    <string name="select_medications_yes">Update</string>
    <string name="select_medications_cancel">Cancel</string>
    <string name="ent_history_name">ENT History</string>
    <string name="medical_history_name">Medical History</string>
    <string name="vaccinations_name">Vaccinations</string>
    <string name="routing_slip_name">Routing Slip</string>
    <string name="xray_search_results_name">XRay Search Results</string>
    <string name="station_name_dental">Dental</string>
    <string name="station_name_x_ray">X-Ray</string>
    <string name="station_name_audiology">Audiology</string>
    <string name="station_name_speech">Speech</string>
    <string name="station_name_ent">ENT</string>
    <string name="station_name_surgery_screening">Surgery Screening</string>
    <string name="station_name_ortho">Ortho</string>
    <string name="station_name_runner">Runner</string>
    <string name="station_name_anesthesiology">Anesthesiology</string>
    <string name="title_current_medications_dialog">Current Medications Dialog</string>
    <string name="title_allergy_medications_dialog">Allergy Medications Dialog</string>
    <string name="msg_unable_to_get_medical_history">Unable to get medical history data</string>
    <string name="msg_successfully_got_medical_history">Successfully got medical history data</string>
    <string name="msg_successfully_saved_medical_history">Successfully saved medical history</string>
    <string name="msg_unable_to_save_medical_history">Unable to save medical history</string>
    <string name="title_unsaved_medical_history">Unsaved Changes to Medical History</string>
    <string name="msg_save_medical_history">Save medical history changes?</string>
    <string name="title_unsaved_ent_exam">Unsaved Changes to ENT Exam</string>
    <string name="msg_save_ent_exam">Save ENT exam changes?</string>
    <string name="title_unsaved_ent_history">Unsaved Changes to ENT History</string>
    <string name="msg_save_ent_history">Save ENT history changes?</string>
    <string name="title_unsaved_xray">Unsaved Changes to X-Ray</string>
    <string name="msg_save_xray">Save X-Ray changes?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_label_add_new_xray">New X-Ray Record</string>
    <string name="button_label_add_new_ent_history">New ENT History Record</string>
    <string name="button_label_add_new_ent_exam">New ENT Exam Record</string>
    <string name="button_label_add_new_audiogram">New Audiogram Record</string>
    <string name="button_label_add_new_dental_treatment">New Dental Treatment Record</string>
    <string name="msg_unable_to_get_routing_slip">Unable to get routing slip data</string>
    <string name="msg_successfully_got_routing_slip">Successfully got routing slip data</string>
    <string name="unable_to_add_routing_slip_entry">Unable to add routing slip entry</string>
    <string name="unable_to_remove_routing_slip_entry">Unable to remove routing slip entry</string>
    <string name="title_unsaved_routing_slip">Unsaved Changes to Routing Slip</string>
    <string name="msg_save_routing_slip">Save routing slip changes?</string>
    <string name="column_label_available_stations">Available Stations</string>
    <string name="column_label_current_routing_slip">Current Routing Slip</string>
    <string name="msg_patient_successfully_checked_out">Patient successfully checked out</string>
    <string name="msg_unable_to_update_state_change_object">Unable to update state change object</string>
    <string name="unable_to_update_routing_slip">Unable to update routing slip</string>
    <string name="unable_to_set_clinic_station_state">Unable to set clinic station state</string>
    <string name="msg_return_to_clinic_successfully_created">Return to clinic successfully created</string>
    <string name="msg_unable_to_create_return_to_clinic">Unable to create return to clinic for patient</string>
    <string name="msg_unable_to_get_medications_list">Unable to get list of medications</string>
    <string name="label_version">Version</string>
    <string name="msg_unable_to_get_patient_headshot">Unable to read patient headshot image</string>
    <string name="msg_successful_away_state">Successfully placed station in away state</string>
    <string name="msg_unsuccessful_away_state">Unable to place station in away state</string>
    <string name="msg_successful_station_active">Successfully made station active</string>
    <string name="msg_unsuccessful_station_active">Unable to make station active</string>
    <string name="button_remove">Remove</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="none">None</string>
    <string name="ent_label_side">Side</string>
    <string name="ent_label_duration">Duration</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="intermittent">Intermittent</string>
    <string name="ent_label_condition_name">Condition Name</string>
    <string name="completed">Completed</string>
    <string name="lingual">Lingual</string>
    <string name="buccal">Buccal</string>
    <string name="mesial">Mesial</string>
    <string name="distal">Distal</string>
    <string name="occlusal">Occlusal</string>
    <string name="labial">Labial</string>
    <string name="incisal">Incisal</string>
    <string name="label_create_account_email">E-mail Address</string>
    <string name="label_create_account_pin">PIN</string>
    <string name="label_create_account_pin_again">PIN Again</string>
</resources>