<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <ImageView
        android:src="@drawable/away"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="128dp"
        android:scaleType="fitCenter"
        android:background="@color/colorWhite"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <RadioButton
            android:id="@+id/away_return5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/away_return5"/>
        <RadioButton
            android:id="@+id/away_return15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/away_return15"/>
        <RadioButton
            android:id="@+id/away_return30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/away_return30"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/away_return60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/away_return60"/>
    </RadioGroup>
</LinearLayout>