<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@+id/label"
        android:scrollHorizontally="false"
        android:breakStrategy="balanced"
        android:layout_marginRight="32dp"
        android:textSize="16dp" >
    </androidx.appcompat.widget.AppCompatTextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="horizontal">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:id="@+id/buccal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/buccal"
                    android:focusable="false"
                    android:focusableInTouchMode="false" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/lingual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/lingual"
                    android:focusable="false"
                    android:focusableInTouchMode="false" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/mesial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/mesial"
                    android:focusable="false"
                    android:focusableInTouchMode="false" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/distal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/distal"
                    android:focusable="false"
                    android:focusableInTouchMode="false" >
                </CheckBox>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:id="@+id/occlusal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/occlusal"
                    android:focusable="false"
                    android:focusableInTouchMode="false" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/labial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/labial"
                    android:focusable="false"
                    android:focusableInTouchMode="false" >
                </CheckBox>

                <CheckBox
                    android:id="@+id/incisal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/incisal"
                    android:focusable="false"
                    android:focusableInTouchMode="false" >
                </CheckBox>

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="10dip"
                android:text="@string/completed"
                android:focusable="false"
                android:focusableInTouchMode="false" >
            </CheckBox>

            <CheckBox
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="10dip"
                android:text="@string/button_remove"
                android:focusable="false"
                android:focusableInTouchMode="false" >
            </CheckBox>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>